--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,8 +10,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" android:theme="@android:style/Theme.Light">
         <activity
             android:name="com.example.yamba.StatusActivity"
             android:label="@string/app_name" >
