--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -22,6 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service android:name=".UpdaterService"></service>
+        
+        
+        
+        
+        
     </application>
 
 </manifest>
