--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
         
         <service android:name=".UpdaterService"></service>
-        
+        <service android:name="RefreshService"></service>
         
         
         
