--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -23,8 +23,9 @@
             </intent-filter>
         </activity>
         
+        <activity android:name=".PrefsActivity"></activity>
         <service android:name=".UpdaterService"></service>
-        <service android:name="RefreshService"></service>
+        <service android:name=".RefreshService"></service>
         
         
         
