--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:targetSdkVersion="14" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application android:name=".YambaApp"
         android:allowBackup="true"
@@ -27,8 +28,10 @@
         <service android:name=".UpdaterService"></service>
         <service android:name=".RefreshService"></service>
         
-        
-        
+        <receiver android:name=".BootReceiver"></receiver>
+        	<intent-filter>
+        	    <action android:name="android.intent.action.BOOST_COMPLETED"/>
+        	</intent-filter>
         
     </application>
 
