--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,9 @@
         </activity>
         
         <activity android:name=".PrefsActivity"></activity>
+        
+        <activity android:name=".TimelineActivity"></activity>
+        
         <service android:name=".UpdaterService"></service>
         <service android:name=".RefreshService"></service>
         
