--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -4,29 +4,29 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="14" />
+        android:minSdkVersion="14"
+        android:targetSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     
     <application android:name=".YambaApp"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:theme="@android:style/Theme.Light">
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
         <activity
             android:name="com.example.yamba.StatusActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         
         <activity android:name=".PrefsActivity"></activity>
         
-        <activity android:name=".TimelineActivity"></activity>
+        <activity android:name=".TimelineActivity">
+             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         
         <service android:name=".UpdaterService"></service>
         <service android:name=".RefreshService"></service>
