--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,14 +14,20 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
+        
         <activity
-            android:name="com.example.yamba.StatusActivity"
-            android:label="@string/app_name" >
+            android:configChanges ="orientation"
+            android:label="@string/status_update" 
+            android:name=".StatusActivity">
         </activity>
         
-        <activity android:name=".PrefsActivity"></activity>
+        <activity 
+            android:label="@string/preferences"
+            android:name=".PrefsActivity"></activity>
         
-        <activity android:name=".TimelineActivity">
+        <activity 
+            android:label="@string/app_name"
+            android:name=".TimelineActivity">
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -31,11 +37,11 @@
         <service android:name=".UpdaterService"></service>
         <service android:name=".RefreshService"></service>
         
-        <receiver android:name=".BootReceiver"></receiver>
+        <receiver android:name=".BootReceiver">
         	<intent-filter>
         	    <action android:name="android.intent.action.BOOST_COMPLETED"/>
         	</intent-filter>
-        
+        </receiver>
     </application>
 
 </manifest>
