--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,12 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="com.example.yamba.permission.REFRESH"/>
     
+    <permission 
+        android:name="com.example.yamba.permission.REFRESH"
+       android:protectionLevel="signature" ></permission>
     
     <application android:name=".YambaApp"
         android:allowBackup="true"
